[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art_General/Fonts/Teko Regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Main_Menu/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/MainMenu/shovelgunlogo.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/character.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/MainMenu/Background.png" type="Texture" id=5]
[ext_resource path="res://Art_General/Fonts/Shojumaru.tres" type="DynamicFont" id=6]
[ext_resource path="res://Art_General/Fonts/Shojumaru Smaller.tres" type="DynamicFont" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.945797
margin_top = -2.19487
margin_right = 0.945801
margin_bottom = -2.19495
rect_rotation = -0.102822
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="Sprite" parent="."]
position = Vector2( 971.551, 541.699 )
scale = Vector2( 1.68243, 1.68243 )
texture = ExtResource( 5 )

[node name="shovelgunlogo" type="Sprite" parent="Banner"]
position = Vector2( 3.94763, -166.049 )
scale = Vector2( 0.55025, 0.55025 )
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -0.0448645
margin_top = 14.9999
margin_right = -0.0449219
margin_bottom = 34.9999
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="HBoxContainer"]
margin_left = 933.0
margin_right = 987.0
margin_bottom = 28.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
text = "Join"

[node name="NameHBox" type="HBoxContainer" parent="."]
margin_left = 0.00646937
margin_top = 509.395
margin_right = 1919.01
margin_bottom = 533.395
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="NameHBox"]
margin_left = 901.0
margin_top = 6.0
margin_right = 967.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 7 )
text = "Name: "

[node name="NameEdit" type="LineEdit" parent="NameHBox"]
margin_left = 971.0
margin_right = 1017.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Player"

[node name="Status" type="Label" parent="."]
margin_left = -0.0653139
margin_top = 593.395
margin_right = 1918.93
margin_bottom = 617.395
custom_fonts/font = ExtResource( 1 )
text = "*placeholder connection status* "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character" type="Sprite" parent="."]
position = Vector2( 132.683, 1031.38 )
scale = Vector2( 0.513637, 0.513637 )
texture = ExtResource( 4 )
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
